--- a/src/components/Card-list/cardlist.css
+++ b/src/components/Card-list/cardlist.css
@@ -1,6 +1,6 @@
 .cardlist {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
   margin: 0 auto;
   grid-gap: 20px;
 }
